--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
     sdk: flutter
   flutter_driver:
     sdk: flutter
-  analyzer: '>=2.1.0 < 6.0.0'
+  analyzer: ">=2.1.0 < 7.0.0"
   collection: ^1.15.0
   gherkin: ^3.1.0
   source_gen: ^1.1.1
@@ -24,7 +24,7 @@ dependencies:
   glob: ^2.0.2
 
 dev_dependencies:
-  meta: '>=1.7.0 < 2.0.0'
+  meta: ">=1.7.0 < 2.0.0"
   pedantic: ^1.11.1
   build_config: ^1.0.0
   flutter_lints: ^2.0.1
